style changes to fix icon button overflow

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -21,7 +21,7 @@ body {
   }
 
   @include lg {
-    padding: 40px auto;
+    padding: 40px 0;
     margin: 0 auto;
   }
 }
