--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -6,13 +6,13 @@ button {
   @include heading-m;
   @include border-shadow;
 
-  background-color: $white;
   color: $black;
+  background-color: $white;
 
   &:hover {
-    border: 3px solid $purple-dark;
-    box-shadow: 0px 10px 0px $purple-dark;
     cursor: pointer;
+    border: 3px solid $purple-dark;
+    box-shadow: 0 10px 0 $purple-dark;
   }
 
   &:is(.pinkBtn) {
@@ -28,15 +28,18 @@ button {
 button.toolBtn {
   @include heading-s;
   width: fit-content;
-  background-color: $purple-dark;
+  padding: 10px 20px;
   color: $white;
+
+  border: none;
+
+  border-radius: 20px;
+  background-color: $purple-dark;
+  box-shadow: none;
+
   &:hover {
     background-color: $pink;
   }
-  border: none;
-  box-shadow: none;
-  border-radius: 20px;
-  padding: 10px 20px;
 }
 
 button.menuBtn {
@@ -45,12 +48,17 @@ button.menuBtn {
 
 button.iconBtn {
   display: flex;
-  place-items: center;
-  position: relative;
+  align-items: center;
   justify-content: space-between;
-  img {
-    position: absolute;
-    right: 0;
-    padding: inherit;
+  container-type: inline-size;
+
+  :not(img) {
+    white-space: nowrap;
+  }
+}
+
+@container (max-width: 320px) {
+  button.iconBtn > img {
+    display: none;
   }
 }
